// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The UserAccountMenu component should display other section 1`] = `
<div
  className="user-account-menu"
>
  <DropDownMenuBase
    menuDirection="south"
    onToggleMenuHandler={[Function]}
    showMenu={false}
    triggerElement={
      <div
        className="user-account-menu__trigger-image"
      >
        <ProfileImage
          size="3.6rem"
        />
      </div>
    }
  >
    <div
      className="sections"
    >
      <div
        className="other-section"
      >
        <div
          key=".0"
          onCloseMenuHandler={[Function]}
        >
          Child section
        </div>
      </div>
      <div
        className="account-section"
      >
        <div
          className="account-section__title"
        >
          My Account
        </div>
        <div
          className="account-section__profile"
        >
          <div
            className="account-section__icon"
          >
            <ProfileImage
              size="10rem"
            />
          </div>
          <div
            className="account-section__name"
          >
            Test User
          </div>
        </div>
        <div
          className="account-section__buttons"
        >
          <Button
            appearance="secondary"
            className=""
            id="account-menu-manage-button"
            linkToNewTab={false}
            linkURL="https://account-staging.ultimaker.com"
            shape="rectangle"
            type="link"
          >
            Manage account
          </Button>
          <Button
            appearance="secondary"
            className=""
            id="account-menu-sign-out-button"
            linkToNewTab={false}
            onClickHandler={[Function]}
            shape="rectangle"
            type="button"
          >
            Sign out
          </Button>
        </div>
      </div>
    </div>
  </DropDownMenuBase>
</div>
`;

exports[`The UserAccountMenu component should render 1`] = `
<div
  className="user-account-menu"
>
  <DropDownMenuBase
    menuDirection="south"
    onToggleMenuHandler={[Function]}
    showMenu={false}
    triggerElement={
      <div
        className="user-account-menu__trigger-image"
      >
        <ProfileImage
          size="3.6rem"
        />
      </div>
    }
  >
    <div
      className="sections"
    >
      <div
        className="account-section"
      >
        <div
          className="account-section__title"
        >
          My Account
        </div>
        <div
          className="account-section__profile"
        >
          <div
            className="account-section__icon"
          >
            <ProfileImage
              size="10rem"
            />
          </div>
          <div
            className="account-section__name"
          >
            Test User
          </div>
        </div>
        <div
          className="account-section__buttons"
        >
          <Button
            appearance="secondary"
            className=""
            id="account-menu-manage-button"
            linkToNewTab={false}
            linkURL="https://account-staging.ultimaker.com"
            shape="rectangle"
            type="link"
          >
            Manage account
          </Button>
          <Button
            appearance="secondary"
            className=""
            id="account-menu-sign-out-button"
            linkToNewTab={false}
            onClickHandler={[Function]}
            shape="rectangle"
            type="button"
          >
            Sign out
          </Button>
        </div>
      </div>
    </div>
  </DropDownMenuBase>
</div>
`;

exports[`The UserAccountMenu component should render sign in button 1`] = `
<div
  className="user-account-menu"
>
  <DropDownMenuBase
    menuDirection="south"
    onToggleMenuHandler={[Function]}
    showMenu={true}
    triggerElement={
      <div
        className="user-account-menu__trigger-image"
      >
        <ProfileImage
          size="3.6rem"
        />
      </div>
    }
  >
    <div
      className="sections"
    >
      <div
        className="account-section"
      >
        <Button
          appearance="secondary"
          className=""
          id="account-menu-sign-in-button"
          linkToNewTab={false}
          onClickHandler={[Function]}
          shape="rectangle"
          type="button"
        >
          Sign in
        </Button>
      </div>
    </div>
  </DropDownMenuBase>
</div>
`;
